# aurora

./: .gitignore  .stylelintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx  monaco-internals.d.ts  monacoTheme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  lsp.rs
src/components/: ActivityBar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  TitleBar.tsx
src/components/editor/: CodeEditor.tsx
src/components/editor/lib/: kotlinLsp.ts  lspTransport.ts
src/components/explorer/: FileExplorer.tsx  FileTreeItem.tsx  FoldersSection.tsx  InlineInput.tsx  ProjectSection.tsx  fileExplorerUtils.ts  fileIcons.tsx
src/lib/: openFolder.ts
src/lib/lsp/: diagnostics.ts  documents.ts  index.ts  providers.ts  state.ts  transport.ts  watcher.ts
src/store/: ide-store.ts
