[package]
name = "aurora"
version = "0.1.0"
description = "A modern and minimalist Kotlin IDE"
authors = ["Kaan"]
edition = "2021"

[lib]
name = "aurora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
log = "0.4.29"
